build: install libgfscontrol static lib and header file
required to build group_tool

Signed-off-by: Fabio M. Di Nitto <fdinitto@redhat.com>

--- a/group/libgfscontrol/Makefile
+++ b/group/libgfscontrol/Makefile
@@ -2,6 +2,9 @@ TARGET= libgfscontrol
 
 MAKESTATICLIB = 1
 
+LIBDIRT=$(TARGET).a
+INCDIRT=$(TARGET).h
+
 OBJS= main.o
 
 include ../../make/defines.mk
