build: fix gfs2 init script Makefile
include SBINDIR bits for secure PATH

Signed-off-by: Fabio M. Di Nitto <fdinitto@redhat.com>

--- a/gfs2/init.d/Makefile
+++ b/gfs2/init.d/Makefile
@@ -11,6 +11,7 @@ include $(OBJDIR)/make/uninstall.mk
 
 $(TARGET): $(S)/$(TARGET).in
 	cat $(S)/$(TARGET).in | sed \
+		-e 's#@SBINDIR@#${sbindir}#g' \
 		-e 's#@INITDDIR@#${initddir}#g' \
 	> $(TARGET)
 
