--- a/gfs2/man/Makefile
+++ b/gfs2/man/Makefile
@@ -1,10 +1,10 @@
 TARGET= gfs2.8 \
 	gfs2_convert.8 \
 	gfs2_edit.8 \
-	gfs2_fsck.8 \
+	fsck.gfs2.8 \
 	gfs2_grow.8 \
 	gfs2_jadd.8 \
-	gfs2_mount.8 \
+	mount.gfs2.8 \
 	gfs2_quota.8 \
 	gfs2_tool.8 \
 	mkfs.gfs2.8
