libgfs2: Merge bitmap.c into block_list.c
The code in bitmap.c was only used internally by the block_list.c
code, so by merging that into block_list.c, we can mark all those
functions static.

Signed-off-by: Steven Whitehouse <swhiteho@redhat.com>

--- a/gfs2/libgfs2/Makefile
+++ b/gfs2/libgfs2/Makefile
@@ -2,8 +2,7 @@ TARGET= libgfs2
 
 MAKESTATICLIB = 1
 
-OBJS=	bitmap.o \
-	block_list.o \
+OBJS=	block_list.o \
 	buf.o \
 	device_geometry.o \
 	fs_bits.o \
