askant: Fix linking with libgfs2
While -lgfs2 was being handled in the Makefile it was being added to the
gcc commandline too early and libgfs2.a wasn't being linked in properly.

This moves the handling of -lgfs2 back into setup.py so that it gets
used in the correct place.

Signed-off-by: Andrew Price <andy@andrewprice.me.uk>

--- a/contrib/askant/Makefile
+++ b/contrib/askant/Makefile
@@ -7,7 +7,7 @@ include $(OBJDIR)/make/clean.mk
 CFLAGS += -I$(SRCDIR)/gfs2/libgfs2
 CFLAGS += -I$(SRCDIR)/gfs2/include
 
-LDFLAGS += -L$(OBJDIR)/gfs2/libgfs2 -lgfs2
+LDFLAGS += -L$(OBJDIR)/gfs2/libgfs2
 
 build:
 	CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)" python $(S)/setup.py build
