gfs_controld: replace cman with cfg
libcman calls have been replaced with corosync libcfg calls

Signed-off-by: David Teigland <teigland@redhat.com>

--- a/group/gfs_controld/Makefile
+++ b/group/gfs_controld/Makefile
@@ -18,17 +18,17 @@ OBJS= 	main.o \
 	util.o \
 	logging.o
 
-CFLAGS += -I${ccsincdir} -I${cmanincdir} -I${logtincdir} -I${dlmcontrolincdir}
+CFLAGS += -I${ccsincdir} -I${logtincdir} -I${dlmcontrolincdir}
 CFLAGS += -I${corosyncincdir} -I${openaisincdir} -I${fencedincdir}
 CFLAGS += -I${KERNEL_SRC}/include/
 CFLAGS += -I$(S)/../libgfscontrol 
 CFLAGS += -I$(S)/../include/
 CFLAGS += -I${incdir}
 
-LDFLAGS += -L${ccslibdir} -lccs -L${cmanlibdir} -lcman
+LDFLAGS += -L${ccslibdir} -lccs
 LDFLAGS += -L${dlmcontrollibdir} -ldlmcontrol
 LDFLAGS += -L${logtlibdir} -llogthread
-LDFLAGS += -L${corosynclibdir} -lcpg -lpthread
+LDFLAGS += -L${corosynclibdir} -lcpg -lcfg -lpthread
 LDFLAGS += -L${openaislibdir} -lSaCkpt
 LDFLAGS += -L${fencedlibdir} -lfenced
 LDFLAGS += -L${libdir}
