I tried to build using the latest autogen.sh and got errors. Adding AC_PROG_LIBTOOL to configure.ac fixed it:
>From fa1d7ff066fead8f0d6873e3177433baa18ae68c Mon Sep 17 00:00:00 2001
From: Jim Meyering <meyering@redhat.com>
Date: Wed, 17 Jun 2009 18:49:27 +0200
Subject: [PATCH] avoid ./autogen.sh failure

* configure.ac: Use AC_PROG_LIBTOOL.

Signed-off-by: Fabio M. Di Nitto <fdinitto@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,7 @@ AC_CONFIG_SRCDIR([group/gfs_controld/config.c])
 AC_CONFIG_HEADERS([make/clusterautoconfig.h])
 
 AC_CANONICAL_HOST
+AC_PROG_LIBTOOL
 
 AC_LANG([C])
 
@@ -31,7 +32,7 @@ if test "$prefix" = "NONE"; then
 			libdir="/usr/lib64"
 		else
 			libdir="/usr/lib"
-		fi	
+		fi
 	fi
 fi
 
@@ -271,7 +272,7 @@ AC_CONFIG_FILES([Makefile
 		 group/libgfscontrol/Makefile
 		 group/gfs_control/Makefile
 		 group/gfs_controld/Makefile
-		 group/man/Makefile	
+		 group/man/Makefile
 		 group/include/Makefile
 		 gfs2/Makefile
 		 gfs2/include/Makefile
