GFS2: Add man page for tunegfs2
Just noticed that we don't have one, so....

Signed-off-by: Steven Whitehouse <swhiteho@redhat.com>

--- a/gfs2/man/Makefile.am
+++ b/gfs2/man/Makefile.am
@@ -9,4 +9,5 @@ dist_man_MANS		= fsck.gfs2.8 \
 			  gfs2_quota.8 \
 			  gfs2_tool.8 \
 			  mkfs.gfs2.8 \
-			  mount.gfs2.8
+			  mount.gfs2.8 \
+			  tunegfs2.8
