gfs2-utils: quieten some new build warnings
With Fedora 15 came new versions of autoconf and gcc which brought with
them some handy new warnings.  The new version of autoconf also wants
inline C source to be wrapped in AC_LANG_SOURCE(). This patch silences
the new warnings, mostly by removing variables which are declared but
unused. It also adds gfs2/tune/tunegfs2 to .gitignore.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,6 @@ gfs2/mkfs/mkfs.gfs2
 gfs2/mount/mount.gfs2
 gfs2/quota/gfs2_quota
 gfs2/tool/gfs2_tool
+gfs2/tune/tunegfs2
 group/gfs_control/gfs_control
 group/gfs_controld/gfs_controld
