--- a/configure.ac
+++ b/configure.ac
@@ -60,7 +60,7 @@ AC_PROG_MAKE_SET
 cc_supports_flag() {
 	local CFLAGS="$@"
 	AC_MSG_CHECKING([whether $CC supports "$@"])
-	AC_COMPILE_IFELSE([int main(){return 0;}] ,
+	AC_COMPILE_IFELSE([AC_LANG_SOURCE([int main(){return 0;}])],
 			  [RC=0; AC_MSG_RESULT([yes])],
 			  [RC=1; AC_MSG_RESULT([no])])
 	return $RC
