gfs2-utils: Update .gitignore for i18n files
Add entries in .gitignore for some i18n-related files which are
generated at build time.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ gfs2/tool/gfs2_tool
 gfs2/tune/tunegfs2
 group/gfs_control/gfs_control
 group/gfs_controld/gfs_controld
+ABOUT-NLS
+po/Makevars.template
+po/POTFILES
+po/stamp-po
