Added gfs2_lockgather data gathering script.

--- a/configure.ac
+++ b/configure.ac
@@ -285,6 +285,7 @@ AC_CONFIG_FILES([Makefile
 		 gfs2/tool/Makefile
 		 gfs2/tune/Makefile
 		 gfs2/man/Makefile
+		 gfs2/lockgather/Makefile
 		 doc/Makefile
 		 po/Makefile.in
 		 ])
