fsck.gfs2: Remove unused hash.c, hash.h
The functions in hash.c aren't being used so it can be removed.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/fsck/Makefile.am
+++ b/gfs2/fsck/Makefile.am
@@ -10,10 +10,10 @@ sbindir := $(shell rpl=0; test '$(exec_prefix):$(sbindir)' = /usr:/usr/sbin \
 
 sbin_PROGRAMS		= fsck.gfs2
 
-noinst_HEADERS		= eattr.h fs_bits.h fsck.h fs_recovery.h hash.h \
+noinst_HEADERS		= eattr.h fs_bits.h fsck.h fs_recovery.h \
 			  inode_hash.h link.h lost_n_found.h metawalk.h util.h
 
-fsck_gfs2_SOURCES	= eattr.c fs_recovery.c hash.c initialize.c \
+fsck_gfs2_SOURCES	= eattr.c fs_recovery.c initialize.c \
 			  inode_hash.c link.c lost_n_found.c main.c metawalk.c \
 			  pass1b.c pass1.c pass1c.c pass2.c pass3.c pass4.c \
 			  pass5.c rgrepair.c util.c
