--- a/gfs2/Makefile.am
+++ b/gfs2/Makefile.am
@@ -1,4 +1,4 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS			= libgfs2 convert edit fsck mkfs mount quota tool man \
+SUBDIRS			= libgfs2 convert edit fsck mkfs quota tool man \
 			  tune include lockgather #init.d 
