gfs2-utils: Make building gfs_controld optional
As of Fedora 17 gfs_controld isn't required and also doesn't build. This
patch adds an --enable-gfs_controld option to allow it to be built on
older systems while defaulting to future norm of not building it.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/group/Makefile.am
+++ b/group/Makefile.am
@@ -1,3 +1,7 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-SUBDIRS			= libgfscontrol gfs_control gfs_controld man include
+if BUILD_GFS_CONTROLD
+DIR_GFS_CONTROLD	= gfs_controld
+endif
+
+SUBDIRS			= libgfscontrol gfs_control $(DIR_GFS_CONTROLD) man include
