gfs2-utils: Only build group/ when gfs_controld is enabled
The previous commit only disabled gfs_controld from building when
--enable-gfs_controld was omitted. When we're not building gfs_controld
there really is no reason to build anything else in the group/ directory
so this patch disables it by default.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,7 +12,11 @@ noinst_HEADERS		= make/copyright.cf
 
 ACLOCAL_AMFLAGS		= -I m4
 
-SUBDIRS			= po group gfs2 doc
+if BUILD_GFS_CONTROLD
+DIR_GROUP		= group
+endif
+
+SUBDIRS			= po $(DIR_GROUP) gfs2 doc
 
 install-exec-local:
 			$(INSTALL) -d $(DESTDIR)/$(LOGDIR)
