--- a/group/Makefile.am
+++ b/group/Makefile.am
@@ -1,7 +1,3 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-if BUILD_GFS_CONTROLD
-DIR_GFS_CONTROLD	= gfs_controld
-endif
-
-SUBDIRS			= libgfscontrol gfs_control $(DIR_GFS_CONTROLD) man include
+SUBDIRS			= libgfscontrol gfs_control gfs_controld man include
