libgfs2: Add a gfs2 block query language
This patch adds a small language which we can use to write libgfs2 and
gfs2-utils tests (among other things). It provides 'get' and 'set'
statements which look up and modify gfs2 blocks. The language API is
defined as:

   struct lgfs2_lang_state;

   struct lgfs2_lang_result {
           uint64_t lr_blocknr;
           struct gfs2_buffer_head *lr_bh;
           const struct lgfs2_metadata *lr_mtype;
           int lr_state; // GFS2_BLKST_*
   };

   struct lgfs2_lang_state *lgfs2_lang_init(void);
   void lgfs2_lang_free(struct lgfs2_lang_state **state);

   int lgfs2_lang_parsef(struct lgfs2_lang_state *state, FILE *script);
   int lgfs2_lang_parses(struct lgfs2_lang_state *state, const char *script);

   struct lgfs2_lang_result *lgfs2_lang_result_next(struct lgfs2_lang_state *state, struct gfs2_sbd *sbd);
   int lgfs2_lang_result_print(struct lgfs2_lang_result *result);
   void lgfs2_lang_result_free(struct lgfs2_lang_result **result);

The lgfs2_lang_parse{s,f} functions allow you to parse a string or a
file respectively. Using the same state object you can then run the same
script multiple times, without parsing it again. The intended usage of
these functions can be shown with a simple example (error checking
omitted):

   struct lgfs2_lang_state *state = lgfs2_lang_init();
   lgfs2_lang_parses(state, "get sb; get 1234 state; set '/foo/bar' {di_entries: 3}");
   for (result = lgfs2_lang_result_next(state, &sbd);
        result != NULL;
        result = lgfs2_lang_result_next(state, &sbd)) {
           lgfs2_lang_result_print(result);
           lgfs2_lang_result_free(&result);
   }
   lgfs2_lang_free(&state);

The language has a simple syntax:

   get <block_lookup> [state]
   set <block_lookup> {<field0>:<value0>, <field1>:<value1>, ... }

A block lookup can be a file system block address (1234 or 0x1234), a
resource group subscript (rgrp[0], rgrp[0x5]), a keyword (sb, master,
root, rindex) or an offset from any of the 

--- a/gfs2/libgfs2/Makefile.am
+++ b/gfs2/libgfs2/Makefile.am
@@ -1,15 +1,24 @@
 MAINTAINERCLEANFILES	= Makefile.in
 
-noinst_HEADERS		= libgfs2.h
+CLEANFILES		= parser.h parser.c lexer.c lexer.h
+BUILT_SOURCES		= parser.h lexer.h
+AM_LFLAGS		= --header-file=lexer.h
+AM_YFLAGS		= -d
+
+noinst_HEADERS		= libgfs2.h lang.h
 
 noinst_LTLIBRARIES	= libgfs2.la
 
 libgfs2_la_SOURCES	= block_list.c fs_bits.c gfs1.c misc.c rgrp.c super.c \
 			  buf.c fs_geometry.c gfs2_disk_hash.c ondisk.c \
 			  device_geometry.c fs_ops.c gfs2_log.c recovery.c \
-			  structures.c meta.c
+			  structures.c meta.c lang.c parser.y lexer.l
 
 libgfs2_la_CPPFLAGS	= -D_FILE_OFFSET_BITS=64 \
 			  -D_LARGEFILE64_SOURCE \
 			  -D_GNU_SOURCE \
 			  -I$(top_srcdir)/gfs2/include
+
+# Autotools can't handle header files output by flex so we have to generate it manually
+lexer.h: lexer.l
+	$(LEX) -o lexer.c $(AM_LFLAGS) $^
