--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ make/stamp-h1
 m4
 make/clusterautoconfig.h*
 missing
+ylwrap
+cscope.out
+.gdb_history
 *.pc
 .deps
 .libs
@@ -29,6 +32,10 @@ missing
 *.lo
 gfs2/convert/gfs2_convert
 gfs2/edit/gfs2_edit
+gfs2/libgfs2/parser.c
+gfs2/libgfs2/parser.h
+gfs2/libgfs2/lexer.c
+gfs2/libgfs2/lexer.h
 gfs2/fsck/fsck.gfs2
 gfs2/mkfs/mkfs.gfs2
 gfs2/mount/mount.gfs2
