--- a/.gitignore
+++ b/.gitignore
@@ -32,15 +32,13 @@ cscope.out
 *.lo
 gfs2/convert/gfs2_convert
 gfs2/edit/gfs2_edit
+gfs2/libgfs2/gfs2l
 gfs2/libgfs2/parser.c
 gfs2/libgfs2/parser.h
 gfs2/libgfs2/lexer.c
 gfs2/libgfs2/lexer.h
 gfs2/fsck/fsck.gfs2
 gfs2/mkfs/mkfs.gfs2
-gfs2/mount/mount.gfs2
-gfs2/quota/gfs2_quota
-gfs2/tool/gfs2_tool
 gfs2/tune/tunegfs2
 group/gfs_control/gfs_control
 group/gfs_controld/gfs_controld
