libgfs2: Fix build with bison 2.6
Bison 2.6 adds a prototype for yyparse in the generated parser.h,
creating a circular dependency between lexer.{c.h} and parser.h.

This patch adds a typedef which breaks the cycle and allows libgfs2 to
build with bison 2.6 again.

It also fixes a race between libgfs2.la and gfs2l by clarifying gfs2l's
dependency on libgfs2.la.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/libgfs2/Makefile.am
+++ b/gfs2/libgfs2/Makefile.am
@@ -23,7 +23,7 @@ libgfs2_la_CPPFLAGS	= -D_FILE_OFFSET_BITS=64 \
 
 gfs2l_SOURCES		= gfs2l.c
 gfs2l_CPPFLAGS		= -I$(top_srcdir)/gfs2/include
-gfs2l_LDADD		= $(top_builddir)/gfs2/libgfs2/libgfs2.la
+gfs2l_LDADD		= libgfs2.la
 
 # Autotools can't handle header files output by flex so we have to generate it manually
 lexer.h: lexer.l
