gfs2-utils: Add the beginnings of a test suite
This adds a skeleton test suite based on the Check testing framework.
The tests are only enabled when the check(-devel) package is present
and the suite is run with `make check'.

The Check framework <http://check.sourceforge.net/> is very
straightforward and conceptually consists of test suites containing test
cases containing tests. To define tests we write functions which
exercise our code and make assertions with functions provided by Check,
such as fail_unless().

To begin with there is only one test and it simply calls
lgfs2_selfcheck, which used to be called in the gfs2_edit code.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ gfs2/libgfs2/lexer.h
 gfs2/fsck/fsck.gfs2
 gfs2/mkfs/mkfs.gfs2
 gfs2/tune/tunegfs2
+tests/check_libgfs2
 group/gfs_control/gfs_control
 group/gfs_controld/gfs_controld
 ABOUT-NLS
