gfs2-utils tests: Add a script to exercise the utils
Add a test script to make it easy to run gfs2 utils with various options
and check their exit codes in sequence. The script is plugged into the
test suite and is run with 'make check'.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,6 @@
-TESTS			= check_libgfs2
+TESTS_ENVIRONMENT	= TOPBUILDDIR=$(top_builddir)
+TESTS			= check_libgfs2 tool_tests.sh
+EXTRA_DIST		= tool_tests.sh
 check_PROGRAMS		= check_libgfs2
 check_libgfs2_SOURCES	= check_meta.c \
 			  $(top_srcdir)/gfs2/libgfs2/libgfs2.h
