gfs2-utils: Rename lockcapture directory to scripts
As more scripts are likely to be added it makes sense to give this
directory a more generic name.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -267,7 +267,7 @@ AC_CONFIG_FILES([Makefile
 		 gfs2/mkfs/Makefile
 		 gfs2/tune/Makefile
 		 gfs2/man/Makefile
-		 gfs2/lockcapture/Makefile
+		 gfs2/scripts/Makefile
 		 doc/Makefile
 		 tests/Makefile
 		 po/Makefile.in
