mkfs.gfs2: Link to libblkid
Add the build system bits to check for, and link mkfs.gfs2 to libblkid.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -126,6 +126,7 @@ PKG_CHECK_MODULES([check], [check >= 0.9.8],
 AM_CONDITIONAL([BUILD_TESTS], [test "x$have_check" = "xyes"])
 
 PKG_CHECK_MODULES([zlib],[zlib])
+PKG_CHECK_MODULES([blkid],[blkid])
 
 # old versions of ncurses don't ship pkg-config files
 PKG_CHECK_MODULES([ncurses],[ncurses],,
