gfs2-utils build: Fix reporting lack of check
Make configure.ac test the correct variable to conditionally warn of the
absence of 'check'.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -278,4 +278,4 @@ AC_CONFIG_FILES([Makefile
 
 AC_OUTPUT
 
-test x"$BUILD_TESTS" = x && AC_MSG_NOTICE([package 'check' not found; unit tests will not be built])
+test x"$have_check" = "xyes" || AC_MSG_NOTICE([package 'check' not found; unit tests will not be built])
