gfs2-utils: Remove some unused build files
This removes some build files which are either no longer used or are
generated by autoconf and needn't have been committed.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ config.guess
 config.log
 config.sub
 config.status
+config.rpath
 Makefile
 depcomp
 install-sh
@@ -50,3 +51,9 @@ po/Makevars.template
 po/POTFILES
 po/stamp-po
 po/remove-potcdate.sed
+po/Makefile.in.in
+po/Rules-quot
+po/boldquot.sed
+po/insert-header.sin
+po/quot.sed
+po/remove-potcdate.sin
