gfs2-utils: Retire gfs_controld
Since linux v3.3 gfs_controld has not been required and it has been
disabled by default in gfs2-utils for some time. This patch removes the
group/ directory containing gfs_control* and related files and removes
them from the build system and .gitignore accordingly.

tunegfs2 also #includes linux_endian.h which was in group/include/ so it
has been moved into gfs2/include/ for the time being.

It also fixes some other build system issues causing 'make distcheck' to
fail.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST		= autogen.sh
+EXTRA_DIST		= autogen.sh README.build
 
 AUTOMAKE_OPTIONS	= foreign
 
@@ -12,21 +12,7 @@ noinst_HEADERS		= make/copyright.cf
 
 ACLOCAL_AMFLAGS		= -I m4
 
-if BUILD_GFS_CONTROLD
-DIR_GROUP		= group
-endif
-
-SUBDIRS			= po $(DIR_GROUP) gfs2 doc tests
-
-install-exec-local:
-			$(INSTALL) -d $(DESTDIR)/$(LOGDIR)
-			$(INSTALL) -d $(DESTDIR)/$(CLUSTERVARRUN)
-			$(INSTALL) -d $(DESTDIR)/$(CLUSTERVARLIB)
-
-uninstall-local:
-			rmdir $(DESTDIR)/$(LOGDIR) || :;
-			rmdir $(DESTDIR)/$(CLUSTERVARRUN) || :;
-			rmdir $(DESTDIR)/$(CLUSTERVARLIB) || :;
+SUBDIRS			= po gfs2 doc tests
 
 maintainer-clean-local:
 	rm -rf m4
