--- a/configure.ac
+++ b/configure.ac
@@ -9,6 +9,7 @@ LT_PREREQ([2.2.6])
 LT_INIT
 
 AC_CONFIG_MACRO_DIR([m4])
+AC_CONFIG_SRCDIR([gfs2/libgfs2/libgfs2.h])
 AC_CONFIG_HEADERS([make/clusterautoconfig.h])
 
 AC_CANONICAL_HOST
