--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ gfs2/libgfs2/lexer.h
 gfs2/fsck/fsck.gfs2
 gfs2/mkfs/mkfs.gfs2
 gfs2/tune/tunegfs2
+test-driver
 tests/check_libgfs2
 tests/testvol
 tests/tests.log
