gfs2-utils tests: Switch to autotest
Replaces the custom tool_tests.sh test harness with the Autotest
framework provided by Autoconf. See doc/README.tests for details.

This is just a straight rework of the existing tests as Autotest test
groups.

Resolves: rhbz#1000066

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,13 @@ gfs2/tune/tunegfs2
 test-driver
 tests/check_libgfs2
 tests/testvol
-tests/tests.log
+tests/testsuite.log
+tests/testsuite.dir
+tests/testsuite.trs
+tests/atconfig
+tests/atlocal
+tests/package.m4
+tests/testsuite
 ABOUT-NLS
 po/Makevars.template
 po/POTFILES
