libgfs2: Add support for new leaf hint fields
Kernel commit 01bcb0de introduces new gfs2_leaf fields. This patch adds
support for those fields to libgfs2, conditional upon them being
discovered in the configure stage. Includes meta.c changes by Steve
Whitehouse.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -116,12 +116,10 @@ AC_CHECK_HEADERS([arpa/inet.h fcntl.h inttypes.h libintl.h limits.h locale.h mnt
 AC_CHECK_HEADERS([linux/dlmconstants.h linux/limits.h linux/types.h linux/netlink.h linux/fs.h],,
 		 [AC_MSG_ERROR([Unable to find all required kernel headers.])])
 
-AC_CHECK_HEADERS([linux/gfs2_ondisk.h],
-		 [AC_CHECK_MEMBERS([struct gfs2_sb.sb_uuid],,
-			[AC_MSG_ERROR([Unable to find gfs2 uuid support in your headers.
-Please update your kernel headers to a more recent version])],
-			[#include <linux/gfs2_ondisk.h>])],
-		 [AC_MSG_ERROR([Unable to find required kernel headers.])])
+AC_CHECK_HEADER([linux/gfs2_ondisk.h], [], [AC_MSG_ERROR([Unable to find linux/gfs2_ondisk.h])])
+AC_CHECK_MEMBER([struct gfs2_sb.sb_uuid], [], [], [[#include <linux/gfs2_ondisk.h>]])
+AC_CHECK_MEMBER([struct gfs2_leaf.lf_inode],[AC_DEFINE([GFS2_HAS_LEAF_HINTS],[],[Leaf block hints])],
+                [], [[#include <linux/gfs2_ondisk.h>]])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_INLINE
