gfs2_edit: Separate out the journal-related functions to journal.c
This patch takes all the code related to dumping journals and puts them
all in a separate journal.c. This will later be used for journal parsing.

Signed-off-by: Bob Peterson <rpeterso@redhat.com>

--- a/gfs2/edit/Makefile.am
+++ b/gfs2/edit/Makefile.am
@@ -2,9 +2,9 @@ MAINTAINERCLEANFILES	= Makefile.in
 
 sbin_PROGRAMS		= gfs2_edit
 
-noinst_HEADERS		= gfs2hex.h hexedit.h extended.h
+noinst_HEADERS		= gfs2hex.h hexedit.h extended.h journal.h
 
-gfs2_edit_SOURCES	= gfs2hex.c hexedit.c savemeta.c extended.c
+gfs2_edit_SOURCES	= gfs2hex.c hexedit.c savemeta.c extended.c journal.c
 
 gfs2_edit_CPPFLAGS	= -D_FILE_OFFSET_BITS=64 -DHELPER_PROGRAM \
 			  -I$(top_srcdir)/gfs2/include \
